k8s/fitness-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fitnest-ingress
  namespace: fitnest
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: jaypandya.systems # You can change this to a real domain later!
    http:
      paths:
      # 1. Send all /api traffic directly to the Backend
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port: 
              number: 3001
      # 2. Send everything else (/) to the Frontend UI
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port: 
              number: 80
  - host: www.jaypandya.systems
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 3001
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
